--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "xml2js": "^0.4.23",
-    "axios": "^0.19.1"
+    "axios": "^0.19.1",
+    "date-fns": "^2.9.0"
   },
   "keywords": [
     "gridsome",
