--- a/packages/source-sybos-operations/package.json
+++ b/packages/source-sybos-operations/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@openbos/gridsome-source-sybos-operations",
   "description": "> TODO: description",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.3",
   "author": "Christoph Hochstrasser <christoph@hochstrasser.io>",
   "homepage": "https://github.com/open-ff/gridsome-source-sybos#readme",
   "license": "MIT",
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
-    "xml2js": "^0.4.23",
-    "date-fns": "^2.9.0"
+    "date-fns": "^2.9.0",
+    "xml2js": "^0.4.23"
   }
 }
