--- a/packages/source-sybos-events/package.json
+++ b/packages/source-sybos-events/package.json
@@ -24,5 +24,9 @@
   "dependencies": {
     "axios": "^0.19.1",
     "xml2js": "^0.4.23"
+  },
+  "gitHead": "78c0eded8da307c66db34d5a650342dbf0d735bd",
+  "publishConfig": {
+    "access": "public"
   }
 }
