--- a/packages/source-sybos-operations/package.json
+++ b/packages/source-sybos-operations/package.json
@@ -25,5 +25,8 @@
     "axios": "^0.19.1",
     "date-fns": "^2.9.0",
     "xml2js": "^0.4.23"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
