--- a/packages/source-sybos-operations/package.json
+++ b/packages/source-sybos-operations/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "axios": "^0.19.1",
     "date-fns": "^2.9.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "@openbos/gridsome-source-sybos-base": "^1.0.0-alpha.6"
   },
   "publishConfig": {
     "access": "public"
